Work on homework 2 assignment